Carrousel destacados y Log In

--- a/styles.css
+++ b/styles.css
@@ -6,24 +6,37 @@ body{
     --white: #FCF5FD;
     --black: #161616;
     --primary: #C417E8;
+    --primary-s1: #A002C2;
     --secondary: #2574E8;
+    --secondary-l1: #679CEA;
+    --secondary-l2: #8EB8F7;
     --accent: #FF7013;
     --font-h1: 'Montserrat', sans-serif;
     --font-h2-h3-body-smallText: 'Lato', sans-serif;
     --font-button: 'Open Sans', sans-serif;
     --size-smallText: 12px;
+    --box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.25);
+
 }
 
 h1{
     font-family: var(--font-h1);
     font-size: 48px;
 }
+
 h2, h3, body, footer{
     font-family: var(--font-h2-h3-body-smallText);
 }
+
 button{
     font-family: var(--font-button);
     font-size: 14px;
+    color: var(--white);
+    letter-spacing: 2.1px;
+    text-transform: uppercase;
+    border-radius: 8px;
+    border: none;
+    box-shadow: var(--box-shadow)
 }
 
 h2{
@@ -38,14 +51,40 @@ body{
     font-size: 16px;
 }
 
-p{
+/* p{
     margin-bottom: 0;
+} */
+
+input{
+    border-radius: 8px;
+    width: 364px;
+    height: 39px;
+    margin: 3px auto 23px auto;
+    border: none;
+    box-shadow: var(--box-shadow)
+}
+
+hr{
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    height: 1px;
+    width: 368px;
+    /* background-color: var(--white); */
 }
 
 /* .small-text{
     font-size: 12px;
 } */
 
+/* NAV LANDING PAGE */
+.nav-landing{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* NAV */
 nav{
     background-color: var(--black);
     height: 80px;
@@ -101,6 +140,171 @@ nav{
     width: 24px;
     height: 24px;
 }
+
+/* BODY LANDING PAGE */
+.body-landing-page{
+    background-image: url(images/fondo1.jpg);
+    background-repeat: repeat;
+    
+    display: flex;
+    justify-content: center;
+}
+
+/* FORM LOG IN */
+
+.form-login{
+    background-color: var(--primary-s1);
+    width: 486px;
+    height: 680px;
+    margin: 134px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 600px;
+    color: var(--white);
+    
+}
+/* 
+.form-title{
+    
+} */
+
+.form-inputs{
+    display: flex;
+    flex-direction: column;
+}
+
+.btn-submit{
+    background-color: var(--secondary);
+    width: 368px;
+    height: 45px;
+    margin-bottom: 14px;
+}
+
+.btn-submit:hover{
+    background-color: var(--secondary-l1);
+}
+
+.form-inputs p{
+    margin: 0 auto;
+}
+
+.form-inputs p a{
+    color: var(--secondary-l2);
+}
+
+.btn-submit, .form-inputs p a:hover{
+    cursor: pointer;
+}
+
+.form-networks{
+    display: flex;
+    flex-direction: column;
+}
+
+.form-networks a{
+    margin-bottom: 10px;
+}
+
+.form-networks a img{
+    width: 368px;
+    height: 45px;
+    border-radius: 8px;
+}
+
+/* FORM REGISTATION */
+.form-registration{
+    display: none;
+}
+
+/* BODY HOME*/
+.container{
+    background-color: var(--primary);
+    position: relative;
+    height: 100%;
+}
+
+.swiper{
+    width: 100%;
+}
+
+.swiper-slide{
+    height: 430px;
+    width: 100%;
+    background-color: rgba(22, 22, 22, 0.57);
+    /* box-shadow: 0 0 20px rgb(0, 0, 0, 0.4); */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.swiper-slide-prev{
+    background-color: transparent;
+    /* box-shadow: 0 0 0 rgba(255, 255, 255, 0); */
+    height: 383px;
+    margin-top: 25px;
+    justify-content: end;
+    align-items: end;
+}
+
+.swiper-slide-next{
+    background-color: transparent;
+    /* box-shadow: 0 0 0 rgba(255, 255, 255, 0); */
+    height: 383px;
+    margin-top: 25px;
+    justify-content: start;
+    align-items: start;
+}
+
+.swiper-slide-prev .icon svg, .swiper-slide-next .icon svg{
+    display: none;
+}
+
+.swiper-slide .icon{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.swiper-slide .icon svg{
+    color: var(--secondary-l1);
+    padding: 0 30px
+}
+
+.swiper-slide .icon svg:hover{
+    color: var(--secondary-l2);
+}
+
+
+.swiper-slide.game-img, .game-img img{
+    height: 380px;
+    width: auto;
+}
+
+
+/* .body-container-recommended{
+    height: 431px;
+    width: 100%;
+}
+
+.carousel-inner{
+    display: flex;
+    justify-content: center;
+    width: 1440px;
+}
+
+.img-recommended{
+    height: 380px;
+    width: auto;
+} */
+
 
 
 
