--- a/styles.css
+++ b/styles.css
@@ -441,24 +441,34 @@ input:focus:required:invalid{
 
 /* CARROUSELS */
 
+.container-carrousel{
+    /* margin-left: 25px; */
+    margin: 0 30px 0 25px;
+    position: relative;
+}
+
 .carrousel{
     width: 100%;
-    margin: 0;
+    overflow: auto;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
 }
+
+.carrousel::-webkit-scrollbar {
+    height: 0;
+  }
 
 .carrousel-cards{
     position: relative;
     display: flex;
     align-items: center;
-    padding: 10px 0;
+    padding: 10px;
     margin: 0 auto;
-    /* overflow: hidden; */
 }
 
 .carrousel-track{
     position: relative;
     display: flex;
-    justify-content: center;
     gap: 5px;
     transition: .5s ease-in-out;
 }
@@ -466,7 +476,7 @@ input:focus:required:invalid{
 .carrousel-arrow{
     position: absolute;
     z-index: 50;
-    top: 60px;
+    top: 28%;
     color: var(--white);
     box-shadow: var(--box-shadow);
     scale: 1.1 1.1;
@@ -477,16 +487,13 @@ input:focus:required:invalid{
     scale: 1.3 1.3;
 }
 
-.carrousel-prev{
+.arrow-prev{
     left: 25px;
+    display: none;
 }
 
-.carrousel-next{
+.arrow-next{
     right: 25px;
-}
-
-.container-carrousel{
-    margin-left: 25px;
 }
 
 /* CARDS */
