--- a/styles.css
+++ b/styles.css
@@ -476,7 +476,7 @@ input:focus:required:invalid{
 .carrousel-arrow{
     position: absolute;
     z-index: 50;
-    top: 28%;
+    /* top: 28%; */
     color: var(--white);
     box-shadow: var(--box-shadow);
     scale: 1.1 1.1;
